# dev_app

./: .gitignore  CMakeLists.txt  Makefile  build.sh  tools-arm.cmake
sdk/lws/include/: lws_config.h
sdk/protobuf/include/google/protobuf/: any_test.pb.h  map.lo  map_lite_unittest.pb.h  map_proto2_unittest.pb.h  map_unittest.pb.h  unittest.pb.cc  unittest.pb.h  unittest_arena.pb.h  unittest_custom_options.pb.h  unittest_drop_unknown_fields.pb.h  unittest_embed_optimize_for.pb.h  unittest_empty.pb.h  unittest_enormous_descriptor.pb.cc  unittest_import.pb.h  unittest_import_lite.pb.h  unittest_import_public.pb.h  unittest_import_public_lite.pb.h  unittest_lazy_dependencies.pb.h  unittest_lazy_dependencies_custom_option.pb.h  unittest_lazy_dependencies_enum.pb.h  unittest_lite.pb.h  unittest_lite_imports_nonlite.pb.h  unittest_mset.pb.h  unittest_mset_wire_format.pb.h  unittest_no_field_presence.pb.h  unittest_no_generic_services.pb.h  unittest_optimize_for.pb.h  unittest_preserve_unknown_enum.pb.h  unittest_preserve_unknown_enum2.pb.h  unittest_proto3.pb.h  unittest_proto3_arena.pb.h  unittest_proto3_arena_lite.pb.h  unittest_proto3_lite.pb.h  unittest_proto3_optional.pb.h  unittest_well_known_types.pb.h
sdk/protobuf/include/google/protobuf/.deps/: any.Plo  any.pb.Plo  any_lite.Plo  api.pb.Plo  arena.Plo  arenastring.Plo  descriptor.Plo  descriptor.pb.Plo  descriptor_database.Plo  duration.pb.Plo  dynamic_message.Plo  empty.pb.Plo  extension_set.Plo  extension_set_heavy.Plo  field_mask.pb.Plo  generated_enum_util.Plo  generated_message_reflection.Plo  generated_message_table_driven.Plo  generated_message_table_driven_lite.Plo  generated_message_util.Plo  implicit_weak_message.Plo  map.Plo  map_field.Plo  message.Plo  message_lite.Plo  no_warning_test-any_test.pb.Po  no_warning_test-map_lite_unittest.pb.Po  no_warning_test-map_proto2_unittest.pb.Po  no_warning_test-map_unittest.pb.Po  no_warning_test-unittest.pb.Po  no_warning_test-unittest_arena.pb.Po  no_warning_test-unittest_custom_options.pb.Po  no_warning_test-unittest_drop_unknown_fields.pb.Po  no_warning_test-unittest_embed_optimize_for.pb.Po  no_warning_test-unittest_empty.pb.Po  no_warning_test-unittest_enormous_descriptor.pb.Po  no_warning_test-unittest_import.pb.Po  no_warning_test-unittest_import_lite.pb.Po  no_warning_test-unittest_import_public.pb.Po  no_warning_test-unittest_import_public_lite.pb.Po  (+141 more)
sdk/protobuf/include/google/protobuf/compiler/.deps/: code_generator.Plo  command_line_interface.Plo  importer.Plo  main.Po  parser.Plo  plugin.Plo  plugin.pb.Plo  protobuf_test-annotation_test_util.Po  protobuf_test-command_line_interface_unittest.Po  protobuf_test-importer_unittest.Po  protobuf_test-mock_code_generator.Po  protobuf_test-parser_unittest.Po  subprocess.Plo  test_plugin-mock_code_generator.Po  test_plugin-test_plugin.Po  zip_writer.Plo
sdk/protobuf/include/google/protobuf/compiler/cpp/: cpp_test_bad_identifiers.pb.h  cpp_test_large_enum_value.pb.h
sdk/protobuf/include/google/protobuf/io/.deps/: coded_stream.Plo  gzip_stream.Plo  printer.Plo  protobuf_test-coded_stream_unittest.Po  protobuf_test-printer_unittest.Po  protobuf_test-tokenizer_unittest.Po  protobuf_test-zero_copy_stream_unittest.Po  strtod.Plo  tokenizer.Plo  zero_copy_stream.Plo  zero_copy_stream_impl.Plo  zero_copy_stream_impl_lite.Plo
sdk/protobuf/include/google/protobuf/stubs/.deps/: bytestream.Plo  common.Plo  int128.Plo  protobuf_test-bytestream_unittest.Po  protobuf_test-common_unittest.Po  protobuf_test-int128_unittest.Po  protobuf_test-status_test.Po  protobuf_test-statusor_test.Po  protobuf_test-stringpiece_unittest.Po  protobuf_test-stringprintf_unittest.Po  protobuf_test-structurally_valid_unittest.Po  protobuf_test-strutil_unittest.Po  protobuf_test-template_util_unittest.Po  protobuf_test-time_test.Po  status.Plo  statusor.Plo  stringpiece.Plo  stringprintf.Plo  structurally_valid.Plo  strutil.Plo  time.Plo  (+1 more)
sdk/protobuf/include/google/protobuf/util/: json_format.pb.h  json_format_proto3.pb.h  message_differencer_unittest.pb.h
src/: CMakeLists.txt
src/adder/: CMakeLists.txt  add.cpp  add.h
src/lws_sample/: CMakeLists.txt  lws_server.cpp
src/protobufs/: CMakeLists.txt
src/test/: CMakeLists.txt  hello.cpp
src/testsqlite/: CMakeLists.txt  main.cpp
(+187 files in other folders)
